--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.path {
+/* .path {
   stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
   animation: dash 3s ease forwards;
@@ -15,4 +15,4 @@
   to {
     stroke-dashoffset: 0;
   }
-}
+} */
