Support for dark mode to body element

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply bg-white dark:bg-neutral-900
+}
+
 /* .path {
   stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
